# fastapi-tutorial

./: first.py  pyproject.toml  second.py
src/: main.py
