[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["m1sk9 <me@m1sk9.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi-tutorial.main:main"
